Update and rename lytuan3.html to index.html

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
             }, 10);
         })(document.getElementById('pinkboar'));
     </script>
-    <div class="center-text">Nguyễn Ngọc Linh</div>
+    <div class="center-text">Nguyễn Thị Phương Thảo</div>
 
 </BODY>
 
